--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 </head>
 <body>
     <div id="weather"></div>
-    <p><span id="temp"></span></p>
-    <p><span id="temp"></span></p>
+    <p>Temperature: <span id="temp"></span></p>
+    <p>Wind Speed: <span id="temp"></span></p>
 
     <script>
     var weather = new XMLHttpRequest();
-    weather.open("GET", "api.openweathermap.org/data/2.5/weather?lat=35&lon=139", false);
+    weather.open("GET", "http://api.wunderground.com/api/fa5715ba5adffac/conditions/q/CA/San_Francisco.json", false);
     weather.send(null);
 
     var r = JSON.parse(weather.response);
-    var dis = "Current location: " + r.current_observation.display_location.full + " <br />";
+    var weather = "Current location: " + r.current_observation.display_location.full + " <br />";
     var temp = r.current_observation.temperature_string + "<br />";
     var wind = r.current_observation.wind_string + "<br />";
-    document.getElementById("weather")
+    document.getElementById("weather").innerHTML = weather;
+    document.getElementById("temp").innerHTML = temp;
+    document.getElementById("wind").innerHTML = arg;
+
+
     </script>
 </body>
 </html>
